# social-media-app-with-fastapi

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
migrations/: env.py
migrations/versions/: 863b400543e8_add_image_url_to_post.py  c769efa079fd_add_likes_table.py  ca824e10eeae_initial_migration.py  cc3527e7abd9_initial_migration.py  fc651a4ca664_add_user_table.py  ff79c251f5f3_add_confirmed_to_user.py
socialapi/: config.py  database.py  logging_conf.py  main.py  security.py  tasks.py
socialapi/libs/b2/: __init__.py
socialapi/models/: post.py
socialapi/routers/: post.py  upload.py  user.py
socialapi/tests/: conftest.py  helpers.py  test_security.py  test_tasks.py
socialapi/tests/routers/: test_post.py  test_upload.py  test_user.py
