[tool.poetry]
name = "social-media"
version = "0.1.0"
description = ""
authors = ["seungriyou <seungri0826@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
greenlet = "^3.0.3"
alembic = "^1.13.1"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
