[tool.poetry]
name = "social-media"
version = "0.1.0"
description = ""
authors = ["seungriyou <seungri0826@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
greenlet = "^3.0.3"
alembic = "^1.13.1"
rich = "^13.7.1"
asgi-correlation-id = "^4.3.1"
python-json-logger = "^2.0.7"
logtail-python = "^0.2.10"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
